--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Customer Orders</title>
+  <link rel="stylesheet" href="css/style.css">
   <script src="vendor/angular-min.js"></script>
   <script src="vendor/angluar-routes-min.js"></script>
   <script src="vendor/underscore-min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/routes.js"></script>
+  <script src="js/factories/customers-factory.js"></script>
   <script src="js/controllers/customer-index-controller.js"></script>
   <script src="js/controllers/customer-show-controller.js"></script>
   <script src="js/controllers/customer-orders-controller.js"></script>
