--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="js/app.js"></script>
   <script src="js/routes.js"></script>
   <script src="js/factories/customers-factory.js"></script>
+  <script src="js/factories/orders-factory.js"></script>
   <script src="js/controllers/customer-index-controller.js"></script>
   <script src="js/controllers/customer-show-controller.js"></script>
   <script src="js/controllers/customer-orders-controller.js"></script>
