--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="vendor/angular-min.js"></script>
   <script src="vendor/angluar-routes-min.js"></script>
+  <script src="vendor/angular-animate-min.js"></script>
   <script src="vendor/underscore-min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/routes.js"></script>
@@ -26,7 +27,7 @@
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="/#/">Home</a></li>
           <li><a ng-href="/#/customers">Customers</a></li>
           <li><a ng-href="/#/orders">Orders</a></li>
         </ul>
