--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Customer Orders</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/animations.css">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="vendor/angular-min.js"></script>
@@ -34,6 +35,6 @@
       </div>
     </div>
   </nav>
-  <div ng-view></div>
+  <div ng-view class="slide-animation"></div>
 </body>
 </html>
